--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>x^2 Function Chart</title>
+  <title>MathShit</title>
   <!-- Load Chart.js library from a CDN -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <!-- Load custom CSS file -->
